[project]
name = "logger-utils"
version = "0.1.3"
description = "Custom logger with multi-process file rotation and Docker support"
authors = [{name = "Oleg Sidorov", email = "sidorov.works@yandex.ru"}]
license = {text = "MIT"}
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "concurrent-log-handler>=0.9.20"
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]